# luoxing_lake_app

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: resource.yml
src/: main.ts
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
