[package]
name = "luoxinglake"
version = "0.1.0"
description = "Su Yufox's small toolbox | 苏鱼狐的小工具箱"
authors = ["SuYufox<susuwenmaosan@gmail.com>"]
license = ""
repository = "https://github.com/suyufox/winterfox"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "luoxinglake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = ["config-toml"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["config-toml"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
luoxinglake-plugins = { version = "0.1.0", path = "../library/luoxinglake-plugins" }
luoxinglake-service = { version = "0.1.0", path = "../library/luoxinglake-service" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
